# ctrees

./: .gitignore  Changelog.md  LICENSE  Readme.md  TODO.md  _CoqProject  coq-ctree.opam  dune  dune-project
.github/workflows/: coq.yml
_old/: Blocking.v  Fair.v  QuantType.v  Scheduler.v
examples/: Election.v  IO.v  IOabs.v  Queue.v  Sec.v
examples/CCS/: AlternativePara.v  Denotation.v  Denotation_extra_events.v  Denotation_old.v  Denotation_old.v.deprecated  Head.v  OpDenot.v  Operational.v  StepSemBisim.v  Syntax.v  dune
examples/Coffee/: coffeeCTree.v  coffeeITree.v  dune  propt.v
examples/Imp/: Imp.v
examples/ImpBr/: ImpBr.v  dune
examples/Messaging/: Bakery.v  Election.v  Fair.v  MPI.v  Toy.v
examples/Yield/: Lang.v  Lang2.v  Par.v  Par2.v  Utils.v  dune
examples/preemptive/: Petersen.v
experiments/: representation.v
tests/ImpBrTest/: dune  main.ml
tests/ImpBrTest/ImpBrEx/: ImpBrEx.v  dune
tests/ImpBrTest/extracted/: Extract.v  dune
theories/: Bisim.v  BisimStruct.v  BisimWeak.v  CCS.v  CTree.v  CTrees.v  CTreesTheory.v  Classes.v  Eq.v  Equ.v  Head.v  HidingChoices.v  ITree.v  Internalize.v  Interp.v  Shallow.v  State.v  Step.v  Trans.v  Unification_issue.v  Utils.v  dune  srel.v
theories/CTree/: Core.v  Equ.v  Pred.v  SBisim.v  Trans.v
theories/CTree/Eq/: Bind.v  Core.v  SBisim.v  SSim.v
theories/CTree/Events/: IO.v  Net.v  State.v  Writer.v
theories/CTree/Interp/: Core.v  State.v
theories/CTree/Logic/: AF.v  AG.v  AX.v  CanStep.v  EX.v  Entails.v  Lemmas.v  Trans.v  WX.v
theories/CTree/Rutt/: Bind.v  Core.v
theories/CTree/SBisim/: Core.v  SSim.v
theories/Core/: CTreeDefinitions.v  Index.v  Utils.v
theories/Eq/: Bisim.v  CSSim.v  Epsilon.v  Equ.v  Equg.v  IterFacts.v  SBisim.v  SBisimAlt.v  SSim.v  SSim0Theory.v  SSimAlt.v  SSimTheory.v  Shallow.v  SumSim.v  Trace.v  Trans.v  Trans0.v  Visible.v  WBisim.v  tmp.txt
theories/Events/: Core.v  IoE.v  NetE.v  StateE.v  WriterE.v
theories/ITree/: Core.v  Equ.v  Interp.v  Pred.v
theories/ITree/Eq/: Bind.v  Core.v  SBisim.v
theories/ITree/Events/: Net.v  State.v  Writer.v
theories/ITree/Logic/: AF.v  CanStep.v  (+2 more)
theories/Interp/: ChoiceB.v  Fold.v  FoldCTree.v  FoldCTree_universe_issue.v  FoldStateT.v  ITree.v  Internalize.v  Interp.v  Log.v  Network.v  Par.v  Preempt.v  Refine.v  SBisimInterp.v  Sched.v  State.v  Uid.v
theories/Logic/: .#Kripke.v  CTLtree.v  CTLwip.v  Congruence.v  Contract.v  Ctl.v  Etl.v  Fair.v  Finite.v  Kripke.v  Leaf.v  Ltl.v  QCtl.v  Readme.tex  Semantics.v  Setoid.v  Tactics.v  ctl_yannick.v
theories/Misc/: Combinators.v  Fair.v  Guarded.v  Head.v  Norm.v  Pure.v  Refine.v  Take.v  Vectors.v  brSElim.v
theories/Utils/: Trc.v  Utils.v  Vectors.v
theories/deprecated/: BisimStrong.v.deprecated  BisimWeak.v.deprecated  Refine.v.deprecated
